--- a/css/global.css
+++ b/css/global.css
@@ -1,4 +1,4 @@
-.section-box .main-title div:nth-of-type(1), .section-box .movie-title span, .modal-content .modal-info .row:not(:last-of-type) .forgetpwd, .modal-content .modal-info .row:not(:last-of-type) .lockpwd, #regist label[for=confirmrule] {
+.main-title div:nth-of-type(1), .movie-title span, .modal-content .modal-info .row:not(:last-of-type) .forgetpwd, .modal-content .modal-info .row:not(:last-of-type) .lockpwd, #regist label[for=confirmrule] {
   font-weight: 300;
 }
 
@@ -6,7 +6,7 @@
   font-weight: 400;
 }
 
-.sidebar .menu > li:hover .menu-link, .sidebar .menu .menu-link.active, .section-box .main-title div:nth-of-type(2), .section-box .sub-title, .section-box .movie-title, .section-box .movie-level, .section-box .section .actions .actions-btn.active, .actionbtn button, .actionbtn div, .modal-content h2, .modal-content label {
+.sidebar .menu > li:hover .menu-link, .sidebar .menu .menu-link.active, .main-title div:nth-of-type(2), .sub-title, .movie-title, .movie-level, .section .actions .actions-btn.active, .actionbtn button, .actionbtn div, .modal-content h2, .modal-content label {
   font-weight: 600;
 }
 
@@ -53,13 +53,14 @@ main {
 
 h1,
 h2,
-h3,
+p,
 h4,
 h5,
 h6,
-p {
+span {
   margin: 0;
   padding: 0;
+  text-rendering: optimizeLegibility;
 }
 
 hr {
@@ -78,6 +79,7 @@ a {
   background-color: transparent;
   text-decoration: none;
   color: #fff;
+  text-rendering: optimizeLegibility;
 }
 
 abbr[title] {
@@ -410,7 +412,7 @@ input:-internal-autofill-selected {
 }
 
 .material-icons {
-  vertical-align: sub;
+  vertical-align: middle;
 }
 
 .hr-line {
@@ -419,7 +421,7 @@ input:-internal-autofill-selected {
   height: 1px;
   background-color: #C53932;
   border: none;
-  margin: 1.3em 0;
+  margin: 1.1em 0;
 }
 
 .mul-ellipsis-4 {
@@ -967,14 +969,15 @@ nav .input-toggler:checked ~ .sidebar-overlay {
 .section-box {
   padding: 0 15px;
 }
-.section-box .main-title {
+
+.main-title {
   width: 100%;
   margin-bottom: 30px;
 }
-.section-box .main-title div {
+.main-title div {
   margin: 0;
 }
-.section-box .main-title div:nth-of-type(1)::before {
+.main-title div:nth-of-type(1)::before {
   content: "";
   display: inline-block;
   width: 6px;
@@ -984,68 +987,62 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   margin-right: 5px;
   margin-bottom: 2px;
 }
-.section-box .main-title div:nth-of-type(2) {
+.main-title div:nth-of-type(2) {
   color: #C53932;
   margin-left: 10px;
 }
-.section-box .primary-title {
+
+.primary-title {
   margin-bottom: 30px;
 }
-.section-box .primary-title:after {
+.primary-title:after {
   content: "|";
   position: relative;
   top: -2px;
   margin-left: 10px;
 }
-.section-box .sub-title {
-  margin-bottom: 15px;
+
+.sub-title {
+  margin-bottom: 20px;
   font-size: 1.1rem;
 }
-.section-box .movie-title {
+
+.movie-title {
   margin-top: 10px;
   width: 100%;
 }
-.section-box .movie-title span {
+.movie-title span {
   display: block;
   color: #818181;
   line-height: 1.3;
 }
-.section-box .movie-level {
+
+.movie-level {
   margin: 15px 0;
   padding: 2px 10px;
   display: inline-block;
   color: #000;
 }
-.section-box .section {
-  color: #fff;
-  max-width: 1400px;
-  margin: 50px auto 50px auto;
-}
-.section-box .section:last-of-type {
-  margin-bottom: 200px;
-}
-.section-box .section .content {
-  margin: 30px 0;
-}
-.section-box .section .content-row {
+
+.content-row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
-.section-box .section .content-row .row {
+.content-row .row {
   width: 100%;
   margin-bottom: 15px;
 }
-.section-box .section .content-row .icon-row {
+.content-row .icon-row {
   position: relative;
 }
-.section-box .section .content-row .icon-row input {
+.content-row .icon-row input {
   padding-left: 60px;
   color: #fff;
 }
-.section-box .section .content-row .icon-row .material-icons {
+.content-row .icon-row .material-icons {
   position: absolute;
   left: 15px;
   top: 42px;
@@ -1053,148 +1050,158 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   font-size: 30px;
   cursor: pointer;
 }
-.section-box .section .content-row .icon-row .material-icons.pwd-on {
+.content-row .icon-row .material-icons.pwd-on {
   color: #C7BA9B;
 }
-.section-box .section .content-row .row-1 {
+
+.row-1 {
   -ms-flex-preferred-size: 10%;
       flex-basis: 10%;
   width: 10%;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
-  .section-box .section .content-row .row-1 {
+  .row-1 {
     -ms-flex-preferred-size: 50%;
         flex-basis: 50%;
   }
 }
 @media all and (max-width: 768px) {
-  .section-box .section .content-row .row-1 {
+  .row-1 {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
   }
 }
-.section-box .section .content-row .row-2 {
+
+.row-2 {
   -ms-flex-preferred-size: 20%;
       flex-basis: 20%;
   width: 20%;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
-  .section-box .section .content-row .row-2 {
+  .row-2 {
     -ms-flex-preferred-size: 33.33%;
         flex-basis: 33.33%;
     width: 33.33%;
   }
 }
 @media all and (max-width: 768px) {
-  .section-box .section .content-row .row-2 {
+  .row-2 {
     -ms-flex-preferred-size: 50%;
         flex-basis: 50%;
     width: 50%;
   }
 }
 @media all and (max-width: 320px) {
-  .section-box .section .content-row .row-2 {
+  .row-2 {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
     width: 100%;
   }
 }
-.section-box .section .content-row .row-3 {
+
+.row-3 {
   -ms-flex-preferred-size: 30%;
       flex-basis: 30%;
   width: 30%;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
-  .section-box .section .content-row .row-3 {
+  .row-3 {
     -ms-flex-preferred-size: 50%;
         flex-basis: 50%;
   }
 }
 @media all and (max-width: 768px) {
-  .section-box .section .content-row .row-3 {
+  .row-3 {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
   }
 }
-.section-box .section .content-row .row-3-1 {
+
+.row-3-1 {
   -ms-flex-preferred-size: 33.33%;
       flex-basis: 33.33%;
   width: 33.33%;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
-  .section-box .section .content-row .row-3-1 {
+  .row-3-1 {
     -ms-flex-preferred-size: 50%;
         flex-basis: 50%;
   }
 }
 @media all and (max-width: 768px) {
-  .section-box .section .content-row .row-3-1 {
+  .row-3-1 {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
   }
 }
-.section-box .section .content-row .row-4 {
+
+.row-4 {
   -ms-flex-preferred-size: 40%;
       flex-basis: 40%;
   width: 40%;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
-  .section-box .section .content-row .row-4 {
+  .row-4 {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
+    width: 100%;
   }
 }
 @media all and (max-width: 768px) {
-  .section-box .section .content-row .row-4 {
+  .row-4 {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
+    width: 100%;
   }
 }
-.section-box .section .content-row .row-7 {
+
+.row-7 {
   -ms-flex-preferred-size: 70%;
       flex-basis: 70%;
   width: 70%;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
-  .section-box .section .content-row .row-7 {
+  .row-7 {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
     width: 100%;
   }
 }
 @media all and (max-width: 768px) {
-  .section-box .section .content-row .row-7 {
+  .row-7 {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
     width: 100%;
   }
 }
-.section-box .section .content-row .row-6 {
+
+.row-6 {
   -ms-flex-preferred-size: 60%;
       flex-basis: 60%;
   width: 60%;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
-  .section-box .section .content-row .row-6 {
+  .row-6 {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
     width: 100%;
   }
 }
 @media all and (max-width: 768px) {
-  .section-box .section .content-row .row-6 {
+  .row-6 {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
     width: 100%;
   }
 }
-.section-box .section .content-row .row-5 {
+
+.row-5 {
   -ms-flex-preferred-size: 50%;
       flex-basis: 50%;
   width: 50%;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
-  .section-box .section .content-row .row-5 {
+  .row-5 {
     -webkit-box-flex: 100%;
         -ms-flex: 100%;
             flex: 100%;
@@ -1202,39 +1209,98 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   }
 }
 @media all and (max-width: 768px) {
-  .section-box .section .content-row .row-5 {
+  .row-5 {
     -webkit-box-flex: 100%;
         -ms-flex: 100%;
             flex: 100%;
     width: 100%;
   }
 }
-.section-box .section .content-row .row-8 {
+
+.row-8 {
   -ms-flex-preferred-size: 80%;
       flex-basis: 80%;
   width: 80%;
 }
-.section-box .section .content-row .row-9 {
+@media all and (min-width: 769px) and (max-width: 991px) {
+  .row-8 {
+    -webkit-box-flex: 100%;
+        -ms-flex: 100%;
+            flex: 100%;
+    width: 100%;
+  }
+}
+@media all and (max-width: 768px) {
+  .row-8 {
+    -webkit-box-flex: 100%;
+        -ms-flex: 100%;
+            flex: 100%;
+    width: 100%;
+  }
+}
+
+.row-9 {
   -ms-flex-preferred-size: 90%;
       flex-basis: 90%;
   width: 90%;
 }
-.section-box .section .actions {
+
+.section {
+  color: #fff;
+  max-width: 1400px;
+  margin: 50px auto 50px auto;
+}
+.section:last-of-type {
+  margin-bottom: 200px;
+}
+@media all and (min-width: 769px) and (max-width: 991px) {
+  .section:last-of-type {
+    margin-bottom: 100px;
+  }
+}
+@media all and (max-width: 768px) {
+  .section:last-of-type {
+    margin-bottom: 50px;
+  }
+}
+.section .content {
+  margin: 30px 0;
+}
+.section .actions {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
   margin-bottom: 40px;
+  width: 100%;
 }
-.section-box .section .actions .actions-btn {
+@media all and (min-width: 769px) and (max-width: 991px) {
+  .section .actions {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+@media all and (max-width: 768px) {
+  .section .actions {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+.section .actions .actions-btn {
   border-radius: 5px;
   cursor: pointer;
   border: 1px solid #FCC900;
   color: #FCC900;
-  padding: 10px 3em;
+  padding: 10px 5px;
   text-align: center;
   margin-right: 20px;
+  width: 12em;
 }
-.section-box .section .actions .actions-btn.active {
+.section .actions .actions-btn:last-of-type {
+  margin-right: 0;
+}
+.section .actions .actions-btn.active {
   color: #000;
   background-color: #FCC900;
 }
@@ -1502,8 +1568,8 @@ footer > div a img {
   border: 1px solid #fff;
   border-radius: 100%;
   position: fixed;
-  bottom: 80px;
-  right: 40px;
+  bottom: 50px;
+  right: 30px;
   cursor: pointer;
   visibility: hidden;
   z-index: 1;
