--- a/scss/global.scss
+++ b/scss/global.scss
@@ -369,7 +369,7 @@ input:-internal-autofill-selected{
 }
 
 .l-font {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
 }
 
 .material-icons {
@@ -982,11 +982,12 @@ nav {
   }
 
   .movie-level {
-    margin: 15px 0;
+    margin: 10px 0;
     padding: 2px 10px;
     display: inline-block;
     color: v.$secondary;
     @extend %weight600;
+    
   }
 
   .content-row {
@@ -1163,7 +1164,7 @@ nav {
     }
 
     .content {
-      margin: 30px 0;
+      margin-bottom: 40px;
     }
 
     .actions {
@@ -1173,9 +1174,13 @@ nav {
       
       @include v.pad-width{
         justify-content: center;
+        margin-bottom: 20px;
+
       }
       @include v.phone-width{
         justify-content: center;
+        margin-bottom: 20px;
+
       }
 
       .actions-btn {
@@ -1204,7 +1209,7 @@ nav {
 
 .actionbtn {
   text-align: center;
-  margin-top: 50px;
+  margin-top: 40px;
 
   button,div{
     width: 100%; 
